--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 </head>
 <body>
     <header class="wrapper">
+        <h1>New York Times Search</h1>
     </header>
+    <button class="btn" id="submit">Search</button>
+    <button class="btn" id="clear">Clear Results</button>
     
+
 
 
 </body>
