--- a/index.html
+++ b/index.html
@@ -20,18 +20,39 @@
 </div>
 
 <div class="container">
-    <div class="row">
-        <p>Search Term: </p>
-    </div>  
-    <div class="row">
-        <p>Number of Records to Retrieve</p>
+    <div class="row col-xs-10">
+        <div class="form-group searchTerm">
+            <label for="exampleFormControlInput1">Search: </label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+          </div>
+    </div>
+    <div class="row col-xs-10">
+        <div class="form-group records">
+            <label for="exampleFormControlInput1">Number of Records to Retrieve </label>
+            <input type="email" class="form-control" id="exampleFormControlInput2" placeholder="name@example.com">
+          </div>
+    </div>
+    <div class="row col-xs-10">
+        <div class="form-group startYear">
+            <label for="exampleFormControlInput1">Start Year (optional) </label>
+            <input type="email" class="form-control" id="exampleFormControlInput3" placeholder="name@example.com">
+          </div>
+    </div>
+    <div class="row col-xs-10">
+        <div class="form-group endYear">
+            <label for="exampleFormControlInput1">End Year (optional) </label>
+            <input type="email" class="form-control" id="exampleFormControlInput4" placeholder="name@example.com">
+          </div>
+    </div>
+    <div class="container searchResults">
 
     </div>
-    <header class="wrapper">
+
+    <!-- <header class="wrapper">
         <h1>New York Times Search</h1>
     </header>
     <button class="btn" id="submit">Search</button>
-    <button class="btn" id="clear">Clear Results</button>
+    <button class="btn" id="clear">Clear Results</button> -->
 </div>
 
 </body>
